# bushglue

./: .gitattributes  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  INSTALL.md  LICENSE  MONOREPO-OPTIONS.md  MQTT.md  Makefile  PLAN2.md  PROJECT.md  README.md  TODOS.md  audio-agent.py  bush  bushutil.py  discord-bot.py  mqtt-architecture.dot  mqttexample.py  pyproject.toml  render-diagram.py  requirements-lock.txt  requirements.txt  sentiment-service.py  sound-service.py  stt-service.py  stt_t2v.py  t2v-service.py  tts-service.py
.claude/skills/deploy/: SKILL.md
.github/workflows/: ci.yml
apps/valve-ble-android/: gradle.properties  settings.gradle
apps/valve-ble-android/app/: build.gradle
data/: .gitignore  models-manifest.tsv  tts-bench-corpus.tsv
docs/: 5v-7-usb-clip.scad  5v-7-usb-clip.stl  AUTOPLAN-REVIEW-2026-05-07.md  PROJECT.md  README.md  STT_TTS-EFFICACY-1PAGER.md  STT_TTS-EFFICACY-WALKTHROUGH.md  STT_TTS-EFFICACY.md  STT_TTS-ENG-REVIEW.md  mqtt-architecture.dot  odroid-clip.3mf  odroid-clip.scad  odroid-clip.stl  piplates-clip.3mf  piplates-clip.scad  piplates-clip.stl  stt-vosk-degradation-2026-05-07.md
firmware/relay-control/: BOARD.md
firmware/relay-control/CIRCUITPY/: code.py  valve.py
firmware/valve-control/: BOARD.md  CALIBRATION.md  PROTOCOL.md
firmware/valve-control/CIRCUITPY/: boot.py  code.py  code_usb_serial.py  code_xiao_ble.py  demo_breath.py  (+2 more)
models/rknn/: whisper_base_en_decoder.rknn  whisper_base_en_encoder.rknn
plans/: bush-cue-bringup.md  inchworm-homing.md  pio-can-demonstrator.md  servo42d-bringup.md
relay-control/: BOARD.md
relay-control/CIRCUITPY/: code.py  index.html  non-websock.py  secrets.example.py  websockets.py
relay-control/host/: fire_control.py
scripts/: audio-agent.py  bushutil.py  discord-bot.py  inject.py  install-services.sh  integration-test.py  monitor.py  requirements.txt  run-tests.sh  sentiment-service.py  sound-service.py  stt-file-service.py  stt-service.py  t2v-service.py  tts-service.py  wait-for-http.py
services/audio/: pyproject.toml
services/audio-agent/: pyproject.toml
services/audio/src/bush_cue/: __init__.py  analyze.py  cuesheet.py  features.py  mapping.py  play.py  presets.py  safety.py  wire.py
services/audio/src/bush_stt/: __init__.py  denoise.py  postprocess.py  vad.py
services/audio/src/bush_stt/engines/: base.py  silero_rknn.py  vosk.py  whisper_bindings.py  whisper_rknn.py  whisper_subprocess.py
services/audio/tests/: conftest.py  test_cue_safety.py  test_denoise.py  test_engines_vosk.py  test_engines_whisper_bindings.py  test_engines_whisper_subprocess.py  test_main_loop.py  test_postprocess.py  test_vad.py
services/core/: pyproject.toml
services/core/src/bush_audio_agent/: __init__.py
services/core/src/bush_flame_expression/: __init__.py
services/core/src/bush_t2v/: __init__.py
services/core/src/bush_tts/: __init__.py
services/core/src/bush_tts/engines/: base.py  espeak.py  piper.py
services/core/src/bush_valve_ble/: __init__.py
services/core/src/bush_valve_serial/: __init__.py
services/core/src/bush_variable_valves/: __init__.py
services/core/tests/: test_engines_espeak.py  test_engines_piper.py  test_main_loop.py
services/discord/: pyproject.toml
services/discord/src/bush_discord/: __init__.py
services/discord/tests/: test_run_synth.py
services/sentiment/: pyproject.toml
services/sentiment/src/bush_sentiment/: __init__.py
services/sentiment/tests/: conftest.py  test_classifier_shape.py
services/sound/: pyproject.toml
services/stt/: pyproject.toml
services/stt/src/bush_stt/: __init__.py
services/t2v-bridge/: pyproject.toml
services/tts/: pyproject.toml
systemd/: TODO  bush-sentiment.service  bush-sound.service  bush-stt.service  bush-t2v.service  bush-tts.service  chromadb.service
systemd/odroid/: bush-audio-agent.service  bush-discord.service  bush-firecontrol-web.service  bush-flame-expression.service  bush-sentiment.service  bush-standby.service  bush-stt.service  bush-t2v.service  bush-tts.service  bush-valve-ble.service  bush-valve-serial.service  bush-variable-valves.service  chromadb.service
t2v/: .gitignore  BUILD.md  Cargo.toml  PLAN.md  PROJECT.md  README.md  pyproject.toml
t2v/preprocessing-biblical/: README.md  config.test.toml  config.toml  pyproject.toml
t2v/preprocessing-biblical/prompts/: README.md  isolate.txt  modernize.txt  questionize.txt
t2v/preprocessing-biblical/src/common/: config.py  db.py  error_tracker.py  llm.py
t2v/preprocessing-biblical/src/t2v_biblical/: main.py
t2v/preprocessing-biblical/src/t2v_biblical/stages/: embed.py  isolate.py  modernize.py  questionize.py
t2v/preprocessing-common/: pyproject.toml
t2v/preprocessing-common/src/t2v_common/: config.py  db.py  error_tracker.py  llm.py  registry.py
t2v/preprocessing-generic/: config.toml.example  pyproject.toml
t2v/preprocessing-generic/collections/movie_quotes/: config.toml
t2v/preprocessing-generic/collections/movie_quotes/data/: snippets.csv
t2v/preprocessing-generic/prompts/: modernize.txt  questionize.txt
t2v/preprocessing-generic/src/t2v_generic/: main.py
t2v/preprocessing-generic/src/t2v_generic/stages/: embed.py  ingest.py  modernize.py  questionize.py
t2v/scripts/: bench_latency.py
t2v/src/: affect_transformer.rs  chat.html  chromadb.rs  embedder.rs  llm_retry.rs  main.rs  reranker.rs  router.rs  server.rs  verse.rs
t2v/templates/affects/: biblical.txt  circus.txt  cultist.txt  explorer.txt
tests/: test_bush_pray.py  test_bushutil.py  test_discord_pipeline.py  test_pipeline_services.py  test_stt_accuracy.py  test_stt_t2v.py  test_transcriber.py
tools/: Dockerfile.rknn-convert  convert-rknn.py
udev/: 90-usb-codec-init.rules  README.md  bush-codec-init
utils/: bush-audio-fix  bush-fetch-models  bush-firecontrol  bush-firecontrol-web  bush-inject  bush-integration-test  bush-monitor  bush-npu-check  bush-pray  bush-standby  bush-stt-bench  bush-stt-bench-make-corpus  bush-stt-file  bush-stt-leak-bisect  bush-tts-bench  bush-valve  bush-valve-demo  bush-valve-sweep  bush-valve-sync-demo  bushctl
(+43 files in other folders)
