[project]
name = "bushglue"
version = "0.1.0"
description = "Bush Glue – AI art installation pipeline"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "rich>=13.0",
    "paho-mqtt>=2.0",
    "bushutil",
]

[tool.uv.sources]
bushutil = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
]
exclude = [
    "t2v",
]
