[package]
name = "text-to-verse"
version = "0.1.0"
edition = "2024"

[features]
expanded-llms = []

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

[profile.samply]
inherits = "release"
debug = true
