[project]
name = "bush-audio"
version = "0.1.0"
description = "Audio I/O services (sound synthesis, speech-to-text)"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "sounddevice>=0.4",
    "vosk>=0.3",
    "silero-vad>=5.0",
    "soxr>=0.5",
    "pyrnnoise>=0.4",
    "pywhispercpp>=1.2.0",
    "rknn-toolkit-lite2; platform_machine == 'aarch64' and sys_platform == 'linux'",
    "bushutil",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
bush-sound = "bush_sound:main"
bush-stt = "bush_stt:main"
bush-cue = "bush_cue:main"

[tool.uv.sources]
bushutil = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/bush_sound", "src/bush_stt", "src/bush_cue"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
