[project]
name = "bush-core"
version = "0.1.0"
description = "Lightweight MQTT services (audio-agent, t2v-bridge, tts)"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "bushutil",
    "bleak>=0.22",
    "pyserial>=3.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
bush-audio-agent = "bush_audio_agent:main"
bush-t2v = "bush_t2v:main"
bush-tts = "bush_tts:main"
bush-variable-valves = "bush_variable_valves:main"
bush-valve-ble = "bush_valve_ble:main"
bush-valve-serial = "bush_valve_serial:main"

[tool.uv.sources]
bushutil = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/bush_audio_agent", "src/bush_t2v", "src/bush_tts", "src/bush_variable_valves", "src/bush_valve_ble", "src/bush_valve_serial"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
