[project]
name = "bush-discord"
version = "0.1.0"
description = "Discord bot with /pray slash command"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "discord.py[voice]>=2.7",
    "discord-ext-voice-recv",
    "PyNaCl>=1.5",
    "numpy>=1.24",
    "davey",
    "bushutil",
    "bush-core",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.scripts]
bush-discord = "bush_discord:main"

[tool.uv.sources]
bushutil = { workspace = true }
bush-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
