[project]
name = "bush-stt"
version = "0.1.0"
description = "Speech-to-text MQTT service (Vosk)"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0",
    "vosk>=0.3",
    "numpy>=1.24",
    "sounddevice>=0.4",
    "bushutil",
]

[project.scripts]
bush-stt = "bush_stt:main"

[tool.uv.sources]
bushutil = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
