[project]
name = "t2v-generic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "t2v-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/t2v_generic"]

[tool.uv.sources]
t2v-common = { workspace = true }
